<resources>
    <string name="app_name">FinalProject</string>
    <string name="loginTitle">Mock Coin</string>
    <string name="loginForgetTextview">ID/PW를 잊어버리셨나요?</string>

    <string name="registerTitle">회원가입</string>
    <string name="registerIDText">ID를 입력하세요</string>
    <string name="registerPWText">비밀번호를 입력하세요</string>
    <string name="registerPWAgainText">비밀번호를 다시 입력하세요</string>
    <string name="registerEmailText">이메일 주소를 입력하세요</string>
    <string name="registerInitfunds">초기 자금은 선정하세요</string>


    <string name="mainMenu1">KRW</string>
    <string name="mainMenu8">BTC</string>
    <string name="mainMenu9">USDT</string>
    <string name="mainMenu2">관심 종목</string>
    <string name="mainMenu3">보유 종목</string>
    <string name="mainMenu4">전체 자산</string>
    <string name="mainMenu5">거래 내역</string>
    <string name="mainItem1">한글명</string>
    <string name="mainItem2">현재가</string>
    <string name="mainItem3">거래대금</string>
    <string name="mainItem4">전일대비</string>



    <string name="itemMenu1">호가</string>
    <string name="itemMenu2">차트</string>
    <string name="itemMenu3">주문</string>
    <string name="itemMenu5">정보</string>




</resources>