<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/detailLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/itemTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="Bitcoin"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/itemCurPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="245000원"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="#3F51B5"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/itemTitle" />

    <ImageButton
        android:id="@+id/itemBackButton"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="#FFFFFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="?attr/actionModeCloseDrawable" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:background="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/itemCurPrice">

        <TextView
            android:id="@+id/itemMenu1"
            android:layout_width="90dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:background="@color/clicked_btn"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/itemMenu1"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/itemMenu2"
            android:layout_width="90dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:background="@color/btn"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/itemMenu2"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/itemMenu3"
            android:layout_width="90dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:background="@color/btn"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/itemMenu3"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textSize="20sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/itemID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        app:layout_constraintBottom_toTopOf="@+id/itemTitle"
        app:layout_constraintEnd_toEndOf="@+id/itemTitle"
        app:layout_constraintStart_toStartOf="@+id/itemTitle"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/detaillayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageButton
        android:id="@+id/itemStarButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_star_gray_24" />

</androidx.constraintlayout.widget.ConstraintLayout>